[package]
name = "bs3"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
actix = "0.10.0"
actix-web = "3.1.0"
actix-web-actors = "3"
actix-rt = "1.1.1"
actix-files = "0.4.0"
actix-service = "1.0.6"
env_logger = "0.8.1"
log = "0.4.11"
futures = "0.3.6"
pin-project = "1.0.1"
rand = "0.7.3"
