[package]
name = "bs3"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs3_core = { path = "../bs3_core", version = "0.0.1" }
env_logger = "0.8.1"
log = "0.4.11"
futures = "0.3.7"
futures-util = "0.3.7"
pin-project = "1.0.1"
serde = "1.0.117"
serde_json = "1.0.59"
