[package]
name = "bs3_core"
version = "0.0.1"
description = "Browsersync core"
readme = "README.md"
keywords = ["actix", "http", "async", "futures"]
edition = "2018"

[lib]
name = "bs3_core"
path = "src/lib.rs"
#crate-type = ["cdylib"]

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
bytes = "0.5.6"
actix = "0.10.0"
actix-web = { version = "3.1.0", features = ["rustls"] }
actix-web-actors = "3"
actix-rt = "1.1.1"
actix_multi = { path = "../actix_multi", version = "0.1.0" }
bs3_files = { path = "../bs3_files", version = "0.0.1" }
actix-service = "1.0.6"
env_logger = "0.8.1"
flate2 = "1.0.19"
log = "0.4.11"
futures = "0.3.7"
futures-util = "0.3.7"
pin-project = "1.0.1"
rand = "0.7.3"
notify = { version = "4.0.15" }
crossbeam-channel = "0.5.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
structopt = "0.3.20"
typescript-definitions = { git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}
wasm-bindgen = "0.2.68"
anyhow = "1.0.33"
thiserror = "1.0.21"
url = "2.2.0"
rustls = "0.18"
tokio = "0.2.6"
async-graphql = "2.4.11"
async-graphql-actix-web = "2.4.11"

[target.'cfg(not(target_arch="wasm32"))'.dev-dependencies]
actix-rt = "1.1.1"

[target.'cfg(target_arch="wasm32")'.dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
wasm-bindgen = "0.2.68"
typescript-definitions = { git = "https://github.com/onelson/typescript-definitions", branch = "no-debug-attrs"}
