[package]
name = "bs3_ffi"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs3_core = { path = "../bs3_core", version = "0.0.1" }
node-bindgen = { version = "4.1.0", features = ["build"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.61"

[build-dependencies]
node-bindgen = "4.1.0"

[lib]
crate-type = ["cdylib"]


